--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Primo Calculator</title>
+    <title>Genshin Calculators</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
